<resources>
    <string name="app_name">FINALMAX</string>
    <string name="txt_codigo">Ingrese el código del estudiante</string>
    <string name="txt_dni">Ingrese el DNI del estudiante</string>
    <string name="txt_nombres">Ingrese los nombres del estudiante</string>
    <string name="txt_celular">Ingrese el celular del estudiante</string>
    <string name="txt_genero">Ingrese el genero del estudiante</string>
    <string name="txt_edad">Ingrese la edad del estudiante</string>
    <string name="txt_contrasena">Ingrese la contraseña del estudiante</string>

    <string name="txt_loguser">Ingrese el codigo del alumno</string>
    <string name="txt_logpass">Ingrese la contraseña del estudiante</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>