<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrar">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_celular"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/txt_celular"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_genero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_genero"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/txt_genero"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_edad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_edad"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/txt_edad"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_contrasena"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/txt_contrasena"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_nombres"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginBottom="36dp"
        android:hint="@string/txt_nombres"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_celular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_dni"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/txt_dni"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_nombres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nombre"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:hint="@string/txt_codigo"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_dni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="#2196F3"
        android:onClick="RegistrarAlumnos"
        android:text="Registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>